# PYXIS-MCP

./: .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs  pyxis_client.rs  safety_validation.rs  tools.rs
src/chatbot/: mod.rs
src/gui/: mod.rs
src/llm_engine/: mod.rs
src/mcp_server/: mod.rs
src/pyxis_mock/: mod.rs
src/vector_search/: mod.rs
