[package]
name = "PYXIS-MCP"
version = "0.1.0"
edition = "2024"
authors = ["th3pajay"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastembed = "5"
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
